@@ -1,5 +1,13 @@
 2005-05-30  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/load-graph.c: (shift_right), (load_graph_update),
+	(load_graph_unalloc), (load_graph_alloc):
+	* src/procman.h: Removed LoadGraph::odata. Just shift
+	LoadGraph::data. See #164115. Thanks to Martin Ejdestig
+	mejde@dtek.chalmers.se.
+
+2005-05-30  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/gnome-system-monitor.schemas.in: Made 
 	/apps/procman/show_tree FALSE default. See #305883.
 
